Added to presentation template

--- a/presentations/PRESENTATION-TEMPLATE/index.html
+++ b/presentations/PRESENTATION-TEMPLATE/index.html
@@ -43,6 +43,27 @@
         <section>
           <img data-src="./images/blank-white-card.jpg" />
         </section>
+
+        <section>
+          <pre>
+            <code class="language-html">
+&lt;a href="#"&gt;Link&lt;/a&gt;
+            </code>
+          </pre>
+        </section>
+
+        <section>
+          <h2>Fragments</h2>
+
+          <br />
+          <br />
+
+          <ul>
+            <li class="fragment">First Fragment</li>
+            <li class="fragment">Second Fragment</li>
+            <li class="fragment">Third Fragment</li>
+          </ul>
+        </section>
       </div>
     </div>
 
