--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -135,7 +135,7 @@
           </details>
         </aside>
 
-        <!-- <aside>
+        <aside>
           <h3>Paternity Leave</h3>
           <p class="family-medical-leave">Family and Medical Leave</p>
           <p>March 2025 - June 2025</p>
@@ -144,7 +144,7 @@
             Spent a 12-week parental leave providing support to my partner during the postpartum phase and create a
             strong bond with our recently-born child.
           </p>
-        </aside> -->
+        </aside>
 
         <aside>
           <h3>Software Engineer</h3>
