--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <title>Chris Bilger</title>
     <link rel="icon" type="image/x-icon" href="./images/favicon.ico" />
 
-    <script type="module" src="./js/nova/index.js" defer></script>
+    <script type="module" src="./js/cass/index.js" defer></script>
 
     <style>
       html {
@@ -244,6 +244,6 @@
       </div>
     </main>
 
-    <nova-command-palette />
+    <cass-command-palette />
   </body>
 </html>
