--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" media="screen" href="../css/mvp.css" />
     <link rel="stylesheet" media="screen" href="../css/styles.css" />
 
-    <script type="module" src="../js/nova/index.js" defer></script>
+    <script type="module" src="../js/cass/index.js" defer></script>
   </head>
 
   <body>
@@ -534,6 +534,6 @@
       </section>
     </footer>
 
-    <nova-command-palette />
+    <cass-command-palette />
   </body>
 </html>
