--- a/404.html
+++ b/404.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" media="screen" href="/css/mvp.css" />
     <link rel="stylesheet" media="screen" href="/css/styles.css" />
 
-    <script type="module" src="/js/nova/index.js" defer></script>
+    <script type="module" src="/js/cass/index.js" defer></script>
   </head>
 
   <body>
@@ -34,6 +34,6 @@
       <p style="text-align: center; font-weight: bold">Error 404: Page Not Found</p>
     </main>
 
-    <nova-command-palette />
+    <cass-command-palette />
   </body>
 </html>
