--- a/github/index.html
+++ b/github/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" media="screen" href="../css/mvp.css" />
     <link rel="stylesheet" media="screen" href="../css/styles.css" />
 
-    <script type="module" src="../js/nova/index.js" defer></script>
+    <script type="module" src="../js/cass/index.js" defer></script>
   </head>
 
   <body>
@@ -183,6 +183,6 @@
       })();
     </script>
 
-    <nova-command-palette />
+    <cass-command-palette />
   </body>
 </html>
