--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -285,11 +285,11 @@
           </p>
           <p>
             I maintain
-            <a href="https://victoriabilger.com/" target="_blank">victoriabilger.com</a>
-            and
-            <a href="https://charlottebilger.com/" target="_blank">charlottebilger.com</a>
-            for my wife and daughter respectively. If you are able to break/bypass the encryption and view the contents
-            of either webpage, please contact me via
+            <a href="https://victoriabilger.com/" target="_blank">victoriabilger.com</a>,
+            <a href="https://charlottebilger.com/" target="_blank">charlottebilger.com</a>, and
+            <a href="https://cassandrabilger.com/" target="_blank">cassandrabilger.com</a>. for my wife and daughters
+            respectively. If you are able to break/bypass the encryption and view the contents of these webpages, please
+            contact me via
             <a href="mailto:christopherbilg@gmail.com">email</a>
             so that I can fix it (and reward you).
           </p>
