--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -265,8 +265,17 @@
         </h2>
         <hr />
 
+        <!-- <aside>
+          <h3>Beyond the Linter: Code Quality Strategies That Stick</h3>
+          <p>
+            <a href="/presentations/beyond-the-linter" target="_blank">Slideshow</a>
+          </p>
+          <p>INSERT DATE HERE</p>
+          <p>INSERT SUMMARY HERE</p>
+        </aside> -->
+
         <aside>
-          <h3>Presenter: PostgreSQL and Us</h3>
+          <h3>PostgreSQL and Us</h3>
           <p>
             <a href="/presentations/postgresql-and-us" target="_blank">Slideshow</a>
           </p>
