--- a/projects/js-network-information/index.html
+++ b/projects/js-network-information/index.html
@@ -38,7 +38,7 @@
       (() => {
         document.getElementsByTagName("main")[0].hidden = false;
 
-        class App extends StyledComponent {
+        class App extends Component {
           init() {
             this.networkInformation = navigator.connection;
           }
