--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -271,7 +271,11 @@
             <a href="/presentations/beyond-the-linter" target="_blank">Slideshow</a>
           </p>
           <p>INSERT DATE HERE</p>
-          <p>INSERT SUMMARY HERE</p>
+          <p>
+            I created and presented a talk on the importance of code quality and how to improve it in the context of
+            TypeScript codebases. This presentation was delivered to all members of the engineering organization at
+            Talkiatry.
+          </p>
         </aside> -->
 
         <aside>
