--- a/projects/index.html
+++ b/projects/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" media="screen" href="../css/mvp.css" />
     <link rel="stylesheet" media="screen" href="../css/styles.css" />
 
-    <script type="module" src="../js/cass/index.js" defer></script>
+    <script type="module" src="../js/casper/index.js" defer></script>
   </head>
 
   <body>
@@ -275,6 +275,6 @@
       })();
     </script>
 
-    <cass-command-palette />
+    <casper-command-palette />
   </body>
 </html>
