Updates to portfolio for Jittter

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -265,6 +265,23 @@
         </h2>
         <hr />
 
+        <aside>
+          <h3>Founder & Owner</h3>
+          <p>
+            Jittter |
+            <a href="https://jittter.com/" target="_blank">Website</a>
+          </p>
+          <p>
+            May 2025 -
+            <b>Present</b>
+          </p>
+          <p>
+            With Jittter, you can effortlessly record, maintain, and search your digital life. Jittter provides a simple
+            and intuitive interface that allows you manage your daily life through the use of notes, tasks, articles,
+            reminders, and more.
+          </p>
+        </aside>
+
         <!-- <aside>
           <h3>Beyond the Linter: Code Quality Strategies That Stick</h3>
           <p>
@@ -277,18 +294,6 @@
             Talkiatry.
           </p>
         </aside> -->
-
-        <aside>
-          <h3>PostgreSQL and Us</h3>
-          <p>
-            <a href="/presentations/postgresql-and-us" target="_blank">Slideshow</a>
-          </p>
-          <p>March 2025</p>
-          <p>
-            I created and presented a talk on how to most effectively use, debug, optimize, and maintain PostgreSQL
-            databases. This talk was given to all members of the engineering organization at Talkiatry.
-          </p>
-        </aside>
 
         <aside>
           <h3>Author, Developer, & Maintainer</h3>
@@ -305,6 +310,18 @@
             contact me via
             <a href="mailto:christopherbilg@gmail.com">email</a>
             so that I can fix it (and reward you).
+          </p>
+        </aside>
+
+        <aside>
+          <h3>PostgreSQL and Us</h3>
+          <p>
+            <a href="/presentations/postgresql-and-us" target="_blank">Slideshow</a>
+          </p>
+          <p>March 2025</p>
+          <p>
+            I created and presented a talk on how to most effectively use, debug, optimize, and maintain PostgreSQL
+            databases. This talk was given to all members of the engineering organization at Talkiatry.
           </p>
         </aside>
 
