Updated date for next tech talk

--- a/presentations/beyond-the-linter/index.html
+++ b/presentations/beyond-the-linter/index.html
@@ -37,7 +37,7 @@
           <br />
 
           <p>Christopher R. Bilger</p>
-          <p>INSERT DATE HERE</p>
+          <p>August 22nd, 2025</p>
         </section>
 
         <section>
