--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -282,19 +282,6 @@
           </p>
         </aside>
 
-        <!-- <aside>
-          <h3>Beyond the Linter: Code Quality Strategies That Stick</h3>
-          <p>
-            <a href="/presentations/beyond-the-linter" target="_blank">Slideshow</a>
-          </p>
-          <p>INSERT DATE HERE</p>
-          <p>
-            I created and presented a talk on the importance of code quality and how to improve it in the context of
-            TypeScript codebases. This presentation was delivered to all members of the engineering organization at
-            Talkiatry.
-          </p>
-        </aside> -->
-
         <aside>
           <h3>Author, Developer, & Maintainer</h3>
           <p>
@@ -310,6 +297,19 @@
             contact me via
             <a href="mailto:christopherbilg@gmail.com">email</a>
             so that I can fix it (and reward you).
+          </p>
+        </aside>
+
+        <aside>
+          <h3>Beyond the Linter: Code Quality Strategies That Stick</h3>
+          <p>
+            <a href="/presentations/beyond-the-linter" target="_blank">Slideshow</a>
+          </p>
+          <p>August 2025</p>
+          <p>
+            I created and presented a talk on the importance of code quality and how to improve it in the context of
+            TypeScript codebases. This presentation was delivered to all members of the engineering organization at
+            Talkiatry.
           </p>
         </aside>
 
