Fixed next presention's name on my portfolio

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -301,7 +301,7 @@
         </aside>
 
         <aside>
-          <h3>Beyond the Linter: Code Quality Strategies That Stick</h3>
+          <h3>Beyond the Linter</h3>
           <p>
             <a href="/presentations/beyond-the-linter" target="_blank">Slideshow</a>
           </p>
