Fixed next presentation's HTML title property

--- a/presentations/beyond-the-linter/index.html
+++ b/presentations/beyond-the-linter/index.html
@@ -13,7 +13,7 @@
     <meta property="og:description" content="Christopher Bilger's Portfolio" />
     <meta property="og:image" content="https://chrisbilger.com/images/portfolio.avif" />
 
-    <title>Beyond the Linter: Code Quality Strategies That Stick</title>
+    <title>Beyond the Linter</title>
     <link rel="icon" type="image/x-icon" href="../../images/favicon.ico" />
 
     <link rel="stylesheet" href="../lib/reveal.js-5.1.0/reset.css" />
