Rough outline added

--- a/presentations/beyond-the-linter/index.html
+++ b/presentations/beyond-the-linter/index.html
@@ -40,6 +40,19 @@
           <p>August 22nd, 2025</p>
         </section>
 
+        <!--
+          Rough Outline:
+            1. Introduction
+              - Agenda
+            2. The Importance of Code Quality
+            2.5 Level-Setting: What Linters Do (and Don’t Do)
+            3. Wait, What is Code Quality and Why do I Care?
+            4. The Pillars of Enduring Code Quality
+            5. Making Code Quality Stick
+            6. Real-World War Stories & Lessons Learned
+            7. Conclusion + Q&A
+        -->
+
         <section>
           <img data-src="./images/blank-white-card.jpg" />
         </section>
