--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -300,7 +300,20 @@
           </p>
         </aside>
 
-        <aside>
+        <!-- <aside>
+          <h3>Release Engineering</h3>
+          <p>
+            <a href="/presentations/release-engineering" target="_blank">Slideshow</a>
+          </p>
+          <p>August 2025</p>
+          <p>
+            I created and presented a talk on how the engineering organization at Talkiatry has implemented release
+            engineering practices to improve the quality and reliability of our software releases. This presentation was
+            delivered to all members of the engineering organization at Talkiatry.
+          </p>
+        </aside> -->
+
+        <!-- <aside>
           <h3>Beyond the Linter</h3>
           <p>
             <a href="/presentations/beyond-the-linter" target="_blank">Slideshow</a>
@@ -311,7 +324,7 @@
             TypeScript codebases. This presentation was delivered to all members of the engineering organization at
             Talkiatry.
           </p>
-        </aside>
+        </aside> -->
 
         <aside>
           <h3>PostgreSQL and Us</h3>
