--- a/presentations/beyond-the-linter/index.html
+++ b/presentations/beyond-the-linter/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="description" content="Christopher Bilger's Portfolio" />
-    <meta name="keywords" content="Resume, Portfolio, Personal, Projects" />
+    <meta name="keywords" content="Resume, Portfolio, Personal, Projects, Presentations" />
     <meta name="author" content="Christopher Bilger" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
@@ -27,6 +27,20 @@
   </head>
 
   <body>
+    <div
+      id="work-in-progress"
+      style="
+        width: 100%;
+        text-align: center;
+        padding: 1rem 0;
+        background-color: #ffff00;
+        font-size: 2rem;
+        font-weight: bold;
+        position: absolute;
+      "
+      >WORK IN PROGRESS</div
+    >
+
     <div class="reveal">
       <div class="slides">
         <section>
@@ -37,7 +51,7 @@
           <br />
 
           <p>Christopher R. Bilger</p>
-          <p>August 22nd, 2025</p>
+          <p><b>INSERT PRESENTATION DATE HERE</b></p>
         </section>
 
         <!--
