--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="description" content="Christopher Bilger's Portfolio" />
-    <meta name="keywords" content="Resume, Portfolio, Personal, Projects" />
+    <meta name="keywords" content="Resume, Portfolio, Personal, Projects, Presentations" />
     <meta name="author" content="Christopher Bilger" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
@@ -53,6 +53,7 @@
             </li>
             <li><a href="/github">GitHub</a></li>
             <li><a href="/projects">Projects</a></li>
+            <li><a href="/presentations">Presentations</a></li>
           </ul>
         </nav>
       </section>
@@ -297,44 +298,6 @@
             contact me via
             <a href="mailto:christopherbilg@gmail.com">email</a>
             so that I can fix it (and reward you).
-          </p>
-        </aside>
-
-        <!-- <aside>
-          <h3>Release Engineering</h3>
-          <p>
-            <a href="/presentations/release-engineering" target="_blank">Slideshow</a>
-          </p>
-          <p>August 2025</p>
-          <p>
-            I created and presented a talk on how the engineering organization at Talkiatry has implemented release
-            engineering practices to improve the quality and reliability of our software releases. This presentation was
-            delivered to all members of the engineering organization at Talkiatry.
-          </p>
-        </aside> -->
-
-        <!-- <aside>
-          <h3>Beyond the Linter</h3>
-          <p>
-            <a href="/presentations/beyond-the-linter" target="_blank">Slideshow</a>
-          </p>
-          <p>August 2025</p>
-          <p>
-            I created and presented a talk on the importance of code quality and how to improve it in the context of
-            TypeScript codebases. This presentation was delivered to all members of the engineering organization at
-            Talkiatry.
-          </p>
-        </aside> -->
-
-        <aside>
-          <h3>PostgreSQL and Us</h3>
-          <p>
-            <a href="/presentations/postgresql-and-us" target="_blank">Slideshow</a>
-          </p>
-          <p>March 2025</p>
-          <p>
-            I created and presented a talk on how to most effectively use, debug, optimize, and maintain PostgreSQL
-            databases. This talk was given to all members of the engineering organization at Talkiatry.
           </p>
         </aside>
 
