--- a/projects/js-screen-orientation/index.html
+++ b/projects/js-screen-orientation/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="description" content="Christopher Bilger's Portfolio" />
-    <meta name="keywords" content="Resume, Portfolio, Personal, Projects" />
+    <meta name="keywords" content="Resume, Portfolio, Personal, Projects, Presentations" />
     <meta name="author" content="Christopher Bilger" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
