--- a/presentations/index.html
+++ b/presentations/index.html
@@ -56,12 +56,16 @@
               <td>
                 <a href="/presentations/beyond-the-linter">Beyond the Linter: Code Quality Strategies That Stick</a>
               </td>
+
+              <td>INSERT PRESENTATION DATE HERE</td>
             </tr> -->
 
             <tr>
               <td>
                 <a href="/presentations/release-engineering">Release Engineering: What We Got Right and Wrong</a>
               </td>
+
+              <td>August 22nd, 2025</td>
             </tr>
 
             <tr>
@@ -70,6 +74,8 @@
                   PostgreSQL and Us: How We Use PostgreSQL, What Works, and What's Next
                 </a>
               </td>
+
+              <td>March 11th, 2025</td>
             </tr>
           </tbody>
         </table>
@@ -104,18 +110,22 @@
 
           Array.from(rows).forEach((element) => {
             const title = element.getElementsByTagName("td")[0].getElementsByTagName("a")[0].innerHTML.toUpperCase();
+            const presentationDate = element.getElementsByTagName("td")[1].innerHTML.toUpperCase();
 
-            if (title.includes(filter)) {
+            if (title.includes(filter) || presentationDate.includes(filter)) {
               element.hidden = false;
             } else {
               element.hidden = true;
             }
 
-            if (filter.startsWith("HIDDEN") && title.startsWith("HIDDEN:")) {
+            if (
+              filter.startsWith("HIDDEN") &&
+              (title.startsWith("HIDDEN:") || presentationDate.startsWith("HIDDEN:"))
+            ) {
               element.hidden = false;
             } else if (filter.startsWith("ALL!")) {
               element.hidden = false;
-            } else if (title.startsWith("HIDDEN:")) {
+            } else if (title.startsWith("HIDDEN:") || presentationDate.startsWith("HIDDEN:")) {
               element.hidden = true;
             }
 
