--- a/presentations/index.html
+++ b/presentations/index.html
@@ -70,6 +70,14 @@
 
             <tr>
               <td>
+                <a href="/presentations/product-demo-07-22-2025">Dependency Upgrades and Trunk-based Branching</a>
+              </td>
+
+              <td>July 22nd, 2025</td>
+            </tr>
+
+            <tr>
+              <td>
                 <a href="/presentations/postgresql-and-us">
                   PostgreSQL and Us: How We Use PostgreSQL, What Works, and What's Next
                 </a>
