Finished next presentation for sprint review

--- a/presentations/index.html
+++ b/presentations/index.html
@@ -70,7 +70,9 @@
 
             <tr>
               <td>
-                <a href="/presentations/product-demo-07-22-2025">Dependency Upgrades and Trunk-based Branching</a>
+                <a href="/presentations/dependency-upgrades-and-trunk-based-branching">
+                  Dependency Upgrades and Trunk-based Branching
+                </a>
               </td>
 
               <td>July 22nd, 2025</td>
