--- a/presentations/dependency-upgrades-and-trunk-based-branching/index.html
+++ b/presentations/dependency-upgrades-and-trunk-based-branching/index.html
@@ -37,7 +37,7 @@
           <br />
 
           <p>Start 2 Visit Team (S2V)</p>
-          <p>July 22nd, 2025</p>
+          <p>August 5th, 2025</p>
         </section>
 
         <section>
