Began working again on my next tech talk

--- a/presentations/index.html
+++ b/presentations/index.html
@@ -52,17 +52,9 @@
 
         <table id="link-table">
           <tbody>
-            <!-- <tr>
-              <td>
-                <a href="/presentations/beyond-the-linter">Beyond the Linter: Code Quality Strategies That Stick</a>
-              </td>
-
-              <td>INSERT PRESENTATION DATE HERE</td>
-            </tr> -->
-
             <tr>
               <td>
-                <a href="/presentations/release-engineering">Release Engineering: What We Got Right and Wrong</a>
+                <a href="/presentations/beyond-the-linter">Beyond the Linter: Code Quality Strategies That Stick</a>
               </td>
 
               <td>September 22nd, 2025</td>
@@ -75,7 +67,7 @@
                 </a>
               </td>
 
-              <td>August 19th, 2025</td>
+              <td>September 2nd, 2025</td>
             </tr>
 
             <tr>
