--- a/presentations/beyond-the-linter/index.html
+++ b/presentations/beyond-the-linter/index.html
@@ -45,26 +45,54 @@
       <div class="slides">
         <section>
           <h2>Beyond the Linter</h2>
-          <h4>Code Quality Strategies That Stick</h4>
+          <h4>Crafting Enduring Code</h4>
 
           <br />
           <br />
 
           <p>Christopher R. Bilger</p>
-          <p><b>INSERT PRESENTATION DATE HERE</b></p>
+          <p>September 22nd, 2025</p>
         </section>
 
         <!--
           Rough Outline:
             1. Introduction
               - Agenda
-            2. The Importance of Code Quality
-            2.5 Level-Setting: What Linters Do (and Don’t Do)
-            3. Wait, What is Code Quality and Why do I Care?
-            4. The Pillars of Enduring Code Quality
-            5. Making Code Quality Stick
-            6. Real-World War Stories & Lessons Learned
-            7. Conclusion + Q&A
+            2. The Importance of Code Quality, Standards, and Best Practices
+              - Why it matters
+              - How it impacts teams and projects
+              - Context of the `talkiatry-app` codebase
+            3. Level-Setting: What Linters Do
+              - Overview of linters
+              - Common misconceptions
+            4. Level-Setting: What Linters Don't Do
+              - Limitations of linters and static analysis tools
+              - Why they can't replace human judgment
+              - Why they are not enough, but still important
+            5. Wait, What is Code Quality and Why do I Care?
+              - Defining code quality
+              - Key metrics and indicators
+              - The role of code quality in software development
+            6. The Pillars of Enduring Code Quality
+              - Code readability and maintainability
+              - Consistency and standards
+              - Documentation and comments
+              - Testing and test coverage
+              - Refactoring and technical debt
+            7. Practical Strategies for Improving Code Quality
+              - Code reviews and pair programming
+              - Automated testing and CI/CD
+              - Refactoring practices
+              - Documentation best practices
+              - Continuous learning and improvement
+            8. Real-World War Stories & Lessons Learned
+              - Case studies from the `talkiatry-app` codebase
+              - Common pitfalls and how to avoid them
+              - Success stories and positive outcomes
+            9. Conclusion + Q&A
+              - Recap of key points
+                - Importance of ongoing commitment to code quality
+                - Open floor for questions and discussion
         -->
 
         <section>
