Added a useful link

--- a/presentations/beyond-the-linter/index.html
+++ b/presentations/beyond-the-linter/index.html
@@ -55,6 +55,9 @@
         </section>
 
         <!--
+          Useful links:
+          - https://gemini.google.com/gem/brainstormer/0ddbb1351169e125
+
           Rough Outline:
             1. Introduction
               - Agenda
