Continued on tech talk

--- a/presentations/beyond-the-linter/index.html
+++ b/presentations/beyond-the-linter/index.html
@@ -27,20 +27,6 @@
   </head>
 
   <body>
-    <div
-      id="work-in-progress"
-      style="
-        width: 100%;
-        text-align: center;
-        padding: 1rem 0;
-        background-color: #ffff00;
-        font-size: 2rem;
-        font-weight: bold;
-        position: absolute;
-      "
-      >WORK IN PROGRESS</div
-    >
-
     <div class="reveal">
       <div class="slides">
         <section>
@@ -65,17 +51,17 @@
               - Why it matters
               - How it impacts teams and projects
               - Context of the `talkiatry-app` codebase
-            3. Level-Setting: What Linters Do
-              - Overview of linters
-              - Common misconceptions
-            4. Level-Setting: What Linters Don't Do
-              - Limitations of linters and static analysis tools
-              - Why they can't replace human judgment
-              - Why they are not enough, but still important
-            5. Wait, What is Code Quality and Why do I Care?
+            3. Wait, What is Code Quality and Why do I Care?
               - Defining code quality
               - Key metrics and indicators
               - The role of code quality in software development
+            4. Level-Setting: What Linters Do
+              - Overview of linters
+              - Common misconceptions
+            5. Level-Setting: What Linters Don't Do
+              - Limitations of linters and static analysis tools
+              - Why they can't replace human judgment
+              - Why they are not enough, but still important
             6. The Pillars of Enduring Code Quality
               - Code readability and maintainability
               - Consistency and standards
@@ -98,29 +84,97 @@
                 - Open floor for questions and discussion
         -->
 
-        <section>
-          <img data-src="./images/blank-white-card.jpg" />
-        </section>
-
-        <section>
+        <!-- <section>
           <pre>
             <code class="language-html">
 &lt;a href="#"&gt;Link&lt;/a&gt;
             </code>
           </pre>
-        </section>
+        </section> -->
 
         <section>
-          <h2>Fragments</h2>
+          <h2>Agenda</h2>
 
           <br />
           <br />
 
           <ul>
-            <li class="fragment">First Fragment</li>
-            <li class="fragment">Second Fragment</li>
-            <li class="fragment">Third Fragment</li>
+            <li class="fragment">The Importance of Code Quality, Standards, and Best Practices</li>
+            <li class="fragment">Level-Setting: What Linters Do, Don't Do, and Why We Should Care</li>
+            <li class="fragment">The Pillars of Enduring Code Quality</li>
+            <li class="fragment">Practical Strategies for Improving Code Quality</li>
+            <li class="fragment">Real-World War Stories & Lessons Learned</li>
+            <li class="fragment">Conclusion + Q&A</li>
           </ul>
+        </section>
+
+        <section>
+          <section>
+            <h3>The Importance of Code Quality, Standards, and Best Practices</h3>
+
+            <br />
+            <br />
+
+            <ul>
+              <li class="fragment">Why it matters</li>
+              <li class="fragment">How it impacts teams and projects</li>
+              <li class="fragment">Context of the <span class="blue">talkiatry-app</span> codebase</li>
+            </ul>
+          </section>
+
+          <section>
+            <h2>Why it matters</h2>
+
+            <br />
+            <br />
+
+            <ul>
+              <li class="fragment">Improves maintainability and readability</li>
+              <li class="fragment">Reduces bugs and technical debt</li>
+              <li class="fragment">Enhances team collaboration and productivity</li>
+              <li class="fragment">Supports long-term project success</li>
+            </ul>
+          </section>
+
+          <section>
+            <h2>How it impacts teams and projects</h2>
+
+            <br />
+            <br />
+
+            <ul>
+              <li class="fragment">>Fosters a culture of quality and excellence</li>
+              <li class="fragment">>Encourages knowledge sharing and mentorship</li>
+              <li class="fragment">>Facilitates onboarding and ramp-up for new team members</li>
+              <li class="fragment">>Enables better decision-making and prioritization</li>
+            </ul>
+          </section>
+
+          <section>
+            <h2>Context of the <span class="blue">talkiatry-app</span> codebase</h2>
+
+            <br />
+            <br />
+
+            <ul>
+              <li class="fragment">A real-world example of a complex, evolving codebase</li>
+              <li class="fragment">Challenges faced in maintaining code quality</li>
+              <li class="fragment">Lessons learned from past experiences</li>
+            </ul>
+          </section>
+
+          <section>
+            <h2>Example 1</h2>
+
+            <br />
+            <br />
+
+            <ul>
+              <li class="fragment">A critical bug caused by poor code quality</li>
+              <li class="fragment">Impact on team morale and project timeline</li>
+              <li class="fragment">Steps taken to resolve the issue</li>
+            </ul>
+          </section>
         </section>
       </div>
     </div>
