Removed all fragments

--- a/presentations/beyond-the-linter/index.html
+++ b/presentations/beyond-the-linter/index.html
@@ -99,12 +99,12 @@
           <br />
 
           <ul>
-            <li class="fragment">The Importance of Code Quality, Standards, and Best Practices</li>
-            <li class="fragment">Level-Setting: What Linters Do, Don't Do, and Why We Should Care</li>
-            <li class="fragment">The Pillars of Enduring Code Quality</li>
-            <li class="fragment">Practical Strategies for Improving Code Quality</li>
-            <li class="fragment">Real-World War Stories & Lessons Learned</li>
-            <li class="fragment">Conclusion + Q&A</li>
+            <li>The Importance of Code Quality, Standards, and Best Practices</li>
+            <li>Level-Setting: What Linters Do, Don't Do, and Why We Should Care</li>
+            <li>The Pillars of Enduring Code Quality</li>
+            <li>Practical Strategies for Improving Code Quality</li>
+            <li>Real-World War Stories & Lessons Learned</li>
+            <li>Conclusion + Q&A</li>
           </ul>
         </section>
 
@@ -116,9 +116,9 @@
             <br />
 
             <ul>
-              <li class="fragment">Why it matters</li>
-              <li class="fragment">How it impacts teams and projects</li>
-              <li class="fragment">Context of the <span class="blue">talkiatry-app</span> codebase</li>
+              <li>Why it matters</li>
+              <li>How it impacts teams and projects</li>
+              <li>Context of the <span class="blue">talkiatry-app</span> codebase</li>
             </ul>
           </section>
 
@@ -129,10 +129,10 @@
             <br />
 
             <ul>
-              <li class="fragment">Improves maintainability and readability</li>
-              <li class="fragment">Reduces bugs and technical debt</li>
-              <li class="fragment">Enhances team collaboration and productivity</li>
-              <li class="fragment">Supports long-term project success</li>
+              <li>Improves maintainability and readability</li>
+              <li>Reduces bugs and technical debt</li>
+              <li>Enhances team collaboration and productivity</li>
+              <li>Supports long-term project success</li>
             </ul>
           </section>
 
@@ -143,10 +143,10 @@
             <br />
 
             <ul>
-              <li class="fragment">>Fosters a culture of quality and excellence</li>
-              <li class="fragment">>Encourages knowledge sharing and mentorship</li>
-              <li class="fragment">>Facilitates onboarding and ramp-up for new team members</li>
-              <li class="fragment">>Enables better decision-making and prioritization</li>
+              <li>>Fosters a culture of quality and excellence</li>
+              <li>>Encourages knowledge sharing and mentorship</li>
+              <li>>Facilitates onboarding and ramp-up for new team members</li>
+              <li>>Enables better decision-making and prioritization</li>
             </ul>
           </section>
 
@@ -157,9 +157,9 @@
             <br />
 
             <ul>
-              <li class="fragment">A real-world example of a complex, evolving codebase</li>
-              <li class="fragment">Challenges faced in maintaining code quality</li>
-              <li class="fragment">Lessons learned from past experiences</li>
+              <li>A real-world example of a complex, evolving codebase</li>
+              <li>Challenges faced in maintaining code quality</li>
+              <li>Lessons learned from past experiences</li>
             </ul>
           </section>
 
@@ -170,9 +170,9 @@
             <br />
 
             <ul>
-              <li class="fragment">A critical bug caused by poor code quality</li>
-              <li class="fragment">Impact on team morale and project timeline</li>
-              <li class="fragment">Steps taken to resolve the issue</li>
+              <li>A critical bug caused by poor code quality</li>
+              <li>Impact on team morale and project timeline</li>
+              <li>Steps taken to resolve the issue</li>
             </ul>
           </section>
         </section>
