Added a work in progress flag to my tech talk

--- a/presentations/beyond-the-linter/index.html
+++ b/presentations/beyond-the-linter/index.html
@@ -27,6 +27,20 @@
   </head>
 
   <body>
+    <div
+      id="work-in-progress"
+      style="
+        width: 100%;
+        text-align: center;
+        padding: 1rem 0;
+        background-color: #ffff00;
+        font-size: 2rem;
+        font-weight: bold;
+        position: absolute;
+      "
+      >WORK IN PROGRESS</div
+    >
+
     <div class="reveal">
       <div class="slides">
         <section>
