Started a new project for the page visibility API

--- a/projects/index.html
+++ b/projects/index.html
@@ -54,6 +54,12 @@
           <tbody>
             <tr>
               <td>
+                <a href="/projects/js-page-visibility">JS Page Visibility</a>
+              </td>
+            </tr>
+
+            <tr>
+              <td>
                 <a href="/projects/js-screen-orientation">JS Screen Orientation</a>
               </td>
             </tr>
