Fixed subtitle for tech talk

--- a/presentations/index.html
+++ b/presentations/index.html
@@ -54,7 +54,7 @@
           <tbody>
             <tr>
               <td>
-                <a href="/presentations/beyond-the-linter">Beyond the Linter: Code Quality Strategies That Stick</a>
+                <a href="/presentations/beyond-the-linter">Beyond the Linter: Crafting Enduring Code</a>
               </td>
 
               <td>September 22nd, 2025</td>
