Fixed all instances of StyledComponent to match css``

--- a/projects/tabbed-router-ui-demo/index.html
+++ b/projects/tabbed-router-ui-demo/index.html
@@ -62,9 +62,9 @@
         }
 
         styles() {
-          return {
-            "font-family": "system-ui, sans-serif",
-          };
+          return css`
+            font-family: system-ui, sans-serif;
+          `;
         }
 
         setActiveTab(tabNumber) {
