--- a/projects/todo-list/index.html
+++ b/projects/todo-list/index.html
@@ -156,14 +156,15 @@
           }
 
           styles() {
-            return {
-              width: "100%",
-              display: "flex",
-              "flex-direction": "row",
-              input: {
-                "flex-grow": 1,
-              },
-            };
+            return css`
+              width: 100%;
+              display: flex;
+              flex-direction: row;
+
+              input {
+                flex-grow: 1;
+              }
+            `;
           }
 
           compose() {
@@ -188,12 +189,12 @@
           }
 
           styles() {
-            return {
-              "font-family": "system-ui, 'Helvetica', 'Ubuntu', sans-serif",
-              width: "100%",
-              "max-width": "500px",
-              margin: "0 auto",
-            };
+            return css`
+              font-family: system-ui, Helvetica, Ubuntu, sans-serif;
+              width: 100%;
+              max-width: 500px;
+              margin: 0 auto;
+            `;
           }
 
           compose() {
