--- a/presentations/beyond-the-linter/index.html
+++ b/presentations/beyond-the-linter/index.html
@@ -51,7 +51,7 @@
           <br />
 
           <p>Christopher R. Bilger</p>
-          <p>October 1st, 2025</p>
+          <p>October 15th, 2025</p>
         </section>
 
         <!--
