--- a/presentations/index.html
+++ b/presentations/index.html
@@ -57,7 +57,7 @@
                 <a href="/presentations/beyond-the-linter">Beyond the Linter: Crafting Enduring Code</a>
               </td>
 
-              <td>October 1st, 2025</td>
+              <td>October 15th, 2025</td>
             </tr>
 
             <tr>
